Fixed overflowing messages, and navbar

--- a/labs/meteor-client/client/stylesheets/chat.less
+++ b/labs/meteor-client/client/stylesheets/chat.less
@@ -12,12 +12,14 @@
     width: 25%;
 }
 .chat li{
+    word-wrap:break-word;
     border-bottom: 1px dotted #B3A9A9;
     margin: 0px;
     padding-bottom: 5px;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 5px;
+
 }
 .chat li:nth-child(even) {
     background-color: rgb(245,245,245);
