--- a/labs/meteor-client/client/stylesheets/style.css
+++ b/labs/meteor-client/client/stylesheets/style.css
@@ -22,6 +22,7 @@ body {
 .lowerHand{}
 .mainContainer{
     height:100%;
+    padding-top:60px;
 }
 .myFooter{
     color:black;
